force-app/main/default/objects/Category3__c/Category3__c.object-meta.xml
<CustomObject>
    <label>Customer Category</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Category Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>