force-app/main/default/objects/Category3__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category3</valueSetName>
    </valueSet>
</CustomField>