force-app/main/default/objects/Category3__c/fields/HeyJobs_Category__c.field-meta.xml
<CustomField>
    <fullName>HeyJobs_Category__c</fullName>
    <label>HeyJobs Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HeyJobs_Category</valueSetName>
    </valueSet>
</CustomField>