force-app/main/default/objects/Category3__c/fields/Old_Reference_Clients__c.field-meta.xml
<CustomField>
    <fullName>Old_Reference_Clients__c</fullName>
    <label>Old Reference Clients</label>
    <length>100</length>
    <type>Text</type>
</CustomField>