force-app/main/default/objects/Category3__c/fields/Reference_Clients__c.field-meta.xml
<CustomField>
    <fullName>Reference_Clients__c</fullName>
    <label>Reference Clients</label>
    <length>200</length>
    <type>Text</type>
</CustomField>