force-app/main/default/objects/Category3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>HeyJobs_Category__c</columns>
    <columns>Reference_Clients__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>