force-app/main/default/objects/Category3__c/listViews/Category3_Reference_mapping.listView-meta.xml
<ListView>
    <fullName>Category3_Reference_mapping</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>HeyJobs_Category__c</columns>
    <columns>Reference_Clients__c</columns>
    <filterScope>Everything</filterScope>
    <label>Category3 - Reference mapping</label>
</ListView>